Finish 1.21 update
Everything works except Xaero map names and forced settings